Fix overflowing heading in TOC

--- a/_sass/toc.scss
+++ b/_sass/toc.scss
@@ -23,6 +23,7 @@
 			padding: 0.2rem;
 			padding-#{$direction}: 0.5rem;
 			text-decoration: none;
+			overflow-wrap: break-word;
 
 			color: change-color($light-foreground, $alpha: 0.75);
 
